--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             background-color: #f0f8ff;
             text-align: left;
             font-weight: bold;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
         .step:hover {
             background-color: #e0f0ff;
@@ -34,37 +37,57 @@
         .active {
             display: block;
         }
+        .checkmark {
+            font-size: 22px;
+            color: green;
+            visibility: hidden;
+        }
+        .completed .checkmark {
+            visibility: visible;
+        }
     </style>
 </head>
 <body>
 
     <h2>Interactive Community Education Checklist</h2>
 
-    <div class="step" onclick="toggleStep('step1')">1️⃣ Welcome children and caregivers</div>
+    <div class="step" onclick="toggleStep('step1', this)">
+        1️⃣ Welcome children and caregivers
+        <span class="checkmark">✅</span>
+    </div>
     <div id="step1" class="content">
         <p>Greet caregivers and children, explain the purpose of today's session.</p>
     </div>
 
-    <div class="step" onclick="toggleStep('step2')">2️⃣ Vitamin A and deworming given today</div>
+    <div class="step" onclick="toggleStep('step2', this)">
+        2️⃣ Vitamin A and deworming given today
+        <span class="checkmark">✅</span>
+    </div>
     <div id="step2" class="content">
         <p>Provide the correct dose of **Vitamin A** and **deworming medication**.</p>
     </div>
 
-    <div class="step" onclick="toggleStep('step3')">3️⃣ Explain age to dose relationship</div>
+    <div class="step" onclick="toggleStep('step3', this)">
+        3️⃣ Explain age to dose relationship
+        <span class="checkmark">✅</span>
+    </div>
     <div id="step3" class="content">
         <p>Use visuals to explain the correct dosage for each age group.</p>
     </div>
 
     <script>
-        function toggleStep(stepId) {
+        function toggleStep(stepId, element) {
             var content = document.getElementById(stepId);
             if (content.style.display === "block") {
                 content.style.display = "none";
+                element.classList.remove("completed");
             } else {
                 content.style.display = "block";
+                element.classList.add("completed");
             }
         }
     </script>
 
 </body>
 </html>
+
