--- a/index.html
+++ b/index.html
@@ -9,84 +9,29 @@
             font-family: Arial, sans-serif;
             text-align: center;
         }
+        .progress-container {
+            width: 80%;
+            background-color: #e0e0e0;
+            border-radius: 5px;
+            margin: 20px auto;
+            height: 20px;
+            position: relative;
+        }
+        .progress-bar {
+            width: 0%;
+            height: 100%;
+            background-color: #0073e6;
+            border-radius: 5px;
+            transition: width 0.5s ease-in-out;
+        }
+        .progress-text {
+            margin-top: 5px;
+            font-weight: bold;
+        }
         .step {
             font-size: 18px;
             cursor: pointer;
             padding: 15px;
             margin: 10px auto;
             width: 80%;
-            border: 2px solid #0073e6;
-            border-radius: 5px;
-            background-color: #f0f8ff;
-            text-align: left;
-            font-weight: bold;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .step:hover {
-            background-color: #e0f0ff;
-        }
-        .content {
-            display: none;
-            padding: 10px;
-            margin-top: 5px;
-            background-color: #ffffff;
-            border-left: 5px solid #0073e6;
-        }
-        .active {
-            display: block;
-        }
-        .checkmark {
-            font-size: 22px;
-            color: green;
-            visibility: hidden;
-        }
-        .completed .checkmark {
-            visibility: visible;
-        }
-    </style>
-</head>
-<body>
-
-    <h2>Interactive Community Education Checklist</h2>
-
-    <div class="step" onclick="toggleStep('step1', this)">
-        1️⃣ Welcome children and caregivers
-        <span class="checkmark">✅</span>
-    </div>
-    <div id="step1" class="content">
-        <p>Greet caregivers and children, explain the purpose of today's session.</p>
-    </div>
-
-    <div class="step" onclick="toggleStep('step2', this)">
-        2️⃣ Vitamin A and deworming given today
-        <span class="checkmark">✅</span>
-    </div>
-    <div id="step2" class="content">
-        <p>Provide the correct dose of **Vitamin A** and **deworming medication**.</p>
-    </div>
-
-    <div class="step" onclick="toggleStep('step3', this)">
-        3️⃣ Explain age to dose relationship
-        <span class="checkmark">✅</span>
-    </div>
-    <div id="step3" class="content">
-        <p>Use visuals to explain the correct dosage for each age group.</p>
-    </div>
-
-    <script>
-        function toggleStep(stepId, element) {
-            var content = document.getElementById(stepId);
-            if (content.style.display === "block") {
-                content.style.display = "none";
-                element.classList.remove("completed");
-            } else {
-                content.style.display = "block";
-                element.classList.add("completed");
-            }
-        }
-    </script>
-
-</body>
-</html>
+            border: 2px
