--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
         <div class="progress-bar" id="progressBar"></div>
     </div>
     <div class="progress-text" id="progressText">Progress: 0%</div>
-
+    <button onclick="resetProgress()" style="margin-top: 15px; padding: 10px 15px; font-size: 16px; background-color: red; color: white; border: none; border-radius: 5px; cursor: pointer;">
+        Reset Progress ❌
+    </button>
     <!-- Steps -->
     <div class="step" onclick="toggleStep('step1', this)">
         1️⃣ Welcome children and caregivers
@@ -100,7 +102,6 @@
     <div id="step3" class="content">
         <p>Use visuals to explain the correct dosage for each age group.</p>
     </div>
-
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             loadProgress();
@@ -150,5 +151,13 @@
         function resetProgress() {
             localStorage.removeItem("completedSteps");
             document.querySelectorAll('.step').forEach(function (step) {
-                step.classList.remove
+                step.classList.remove("completed");
+            });
+            document.querySelectorAll('.content').forEach(function (content) {
+                content.style.display = "none";
+            });
+            updateProgress();
+        }
+    </script>
+
 
