--- a/index.html
+++ b/index.html
@@ -76,11 +76,6 @@
     </div>
     <div class="progress-text" id="progressText">Progress: 0%</div>
 
-        <button onclick="resetProgress()" style="margin-top: 15px; padding: 10px 15px; font-size: 16px; background-color: red; color: white; border: none; border-radius: 5px; cursor: pointer;">
-        Reset Progress ❌
-    </button>
-
-
     <!-- Steps -->
     <div class="step" onclick="toggleStep('step1', this)">
         1️⃣ Welcome children and caregivers
@@ -104,6 +99,24 @@
     </div>
     <div id="step3" class="content">
         <p>Use visuals to explain the correct dosage for each age group.</p>
+    </div>
+    <div style="display: flex; justify-content: center; margin-top: 15px;">
+        <button onclick="resetProgress()" style="
+            padding: 12px 20px;
+            font-size: 18px;
+            background-color: red;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 8px;
+            font-weight: bold;
+        ">
+            Reset Progress ❌
+        </button>
     </div>
 
     <script>
