--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             gap: 8px;
             font-weight: bold;
         ">
-            Reset Progress ❌
+            Reset Progress
         </button>
     </div>
 
