--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="progress-text" id="progressText">Progress: 0%</div>
 
     <!-- Steps -->
-    <div class="step" onclick="toggleStep('step1', this)">
+    <div class="step" onclick="toggleStep('step1', this)" data-step-id="step1">
         1️⃣ Welcome children and caregivers
         <span class="checkmark">✅</span>
     </div>
@@ -85,7 +85,7 @@
         <p>Greet caregivers and children, explain the purpose of today's session.</p>
     </div>
 
-    <div class="step" onclick="toggleStep('step2', this)">
+    <div class="step" onclick="toggleStep('step2', this)" data-step-id="step2">
         2️⃣ Vitamin A and deworming given today
         <span class="checkmark">✅</span>
     </div>
@@ -93,7 +93,7 @@
         <p>Provide the correct dose of **Vitamin A** and **deworming medication**.</p>
     </div>
 
-    <div class="step" onclick="toggleStep('step3', this)">
+    <div class="step" onclick="toggleStep('step3', this)"  data-step-id="step3">
         3️⃣ Explain age to dose relationship
         <span class="checkmark">✅</span>
     </div>
@@ -120,7 +120,6 @@
             Reset Progress <span style="display: flex; align-items: center;"></span>
         </button>
     </div>
-    
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             loadProgress();
@@ -149,9 +148,9 @@
             // ✅ FIX: Show the reset button as soon as ANY step is completed
             var resetButton = document.getElementById("resetButton");
             if (completedSteps.length > 0) {
-                resetButton.style.display = "flex";
+                resetButton.style.display = "flex"; 
             } else {
-                resetButton.style.display = "none";
+                resetButton.style.display = "none"; 
             }
 
             saveProgress();
@@ -160,7 +159,7 @@
         function saveProgress() {
             var completedSteps = [];
             document.querySelectorAll('.step.completed').forEach(function (step) {
-                completedSteps.push(step.getAttribute("data-step-id"));
+                completedSteps.push(step.getAttribute("data-step-id")); // Stores the correct step identifier
             });
             localStorage.setItem("completedSteps", JSON.stringify(completedSteps));
         }
@@ -171,11 +170,9 @@
                 var stepId = step.getAttribute("data-step-id");
                 if (completedSteps.includes(stepId)) {
                     step.classList.add("completed");
-                    var contentId = step.getAttribute("onclick").match(/'([^']+)'/)[1];
-                    document.getElementById(contentId).style.display = "block"; // ✅ Ensures steps are remembered as completed
                 }
             });
-            updateProgress();
+            updateProgress(); // ✅ Ensures reset button updates correctly on page load
         }
 
         function resetProgress() {
