--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
     </div>
     <div id="step3" class="content">
         <p>Use visuals to explain the correct dosage for each age group.</p>
+    </div>
+        
     <div style="display: flex; justify-content: center; margin-top: 15px;">
         <button id="resetButton" onclick="resetProgress()" style="
             padding: 12px 24px;
