--- a/index.html
+++ b/index.html
@@ -113,15 +113,15 @@
             display: none; /* Initially hidden */
             align-items: center;
             justify-content: center;
-            gap: 10px;
             font-weight: bold;
             width: 200px;
             height: 50px;
             text-align: center;
         ">
-            Reset Progress <span style="display: flex; align-items: center;"></span>
+            Reset Progress
         </button>
     </div>
+
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             loadProgress();
