--- a/index.html
+++ b/index.html
@@ -78,27 +78,35 @@
 
     <!-- Steps -->
     <div class="step" onclick="toggleStep('step1', this)" data-step-id="step1">
-        1️⃣ Welcome children and caregivers
+        1️⃣ Community Education
         <span class="checkmark">✅</span>
     </div>
     <div id="step1" class="content">
-        <p>Greet caregivers and children, explain the purpose of today's session.</p>
+        <p>Educate your community and raise awareness among caregivers waiting to receive service for their children.</p>
     </div>
 
     <div class="step" onclick="toggleStep('step2', this)" data-step-id="step2">
-        2️⃣ Vitamin A and deworming given today
+        2️⃣ Eligibility Criteria
         <span class="checkmark">✅</span>
     </div>
     <div id="step2" class="content">
-        <p>Provide the correct dose of **Vitamin A** and **deworming medication**.</p>
+        <p>Determine if a child is eligible to receive VAS+D services today.</p>
     </div>
 
     <div class="step" onclick="toggleStep('step3', this)"  data-step-id="step3">
-        3️⃣ Explain age to dose relationship
+        3️⃣ Giving Vitamin A
         <span class="checkmark">✅</span>
     </div>
     <div id="step3" class="content">
-        <p>Use visuals to explain the correct dosage for each age group.</p>
+        <p>Properly administer vitamin A supplements to children under 5.</p>
+    </div>
+
+        <div class="step" onclick="toggleStep('step4', this)"  data-step-id="step4">
+        4️⃣ Giving Deworming
+        <span class="checkmark">✅</span>
+    </div>
+    <div id="step3" class="content">
+        <p>Properly administer deworming tablets to children under 5.</p>
     </div>
         
     <div style="display: flex; justify-content: center; margin-top: 15px;">
